@@ -7,10 +7,27 @@ Author: Rafael A Irizarry, Benilton S Carvalho <bcarvalh@jhsph.edu>, Robert Scha
 Maintainer: Benilton S Carvalho <bcarvalh@jhsph.edu>, Robert Scharpf <rscharpf@jhsph.edu>, Matt Ritchie <mritchie@wehi.EDU.AU>
 Description: Faster implementation of CRLMM specific to SNP 5.0 and 6.0 arrays, as well as a copy number tool specific to 5.0, 6.0, and Illumina platforms
 License: Artistic-2.0
-Depends: methods, Biobase (>= 2.7.2), R (>= 2.11.0), oligoClasses (>= 1.9.21)
-Imports: affyio (>= 1.15.2), preprocessCore, utils, stats, genefilter, splines, mvtnorm, ellipse, SNPchip
-Suggests: hapmapsnp5, hapmapsnp6, genomewidesnp5Crlmm (>= 1.0.2),genomewidesnp6Crlmm (>= 1.0.2), snpMatrix
+Depends: R (>= 2.11.0),
+         methods,
+         Biobase (>= 2.7.2),
+         oligoClasses (>= 1.9.28)
+Imports: affyio (>= 1.15.2),
+         preprocessCore,
+         utils,
+         stats,
+         genefilter,
+         splines,
+         mvtnorm,
+         ellipse,
+         SNPchip,ff
+Suggests: hapmapsnp5,
+          hapmapsnp6,
+          genomewidesnp5Crlmm (>= 1.0.2),
+          genomewidesnp6Crlmm (>= 1.0.2),
+          snpMatrix,
+          metaArray
 Collate: AllGenerics.R
+	 AllClasses.R
 	 methods-CNSet.R
 	 methods-eSet.R
          methods-SnpSuperSet.R
