@@ -441,3 +441,9 @@ then readIDAT() should work. Thanks to Pierre Cherel who reported this error.
 2010-03-08 R.Scharpf committed version 1.5.33
 
 **	  Added annotatedDataFrameFrom methods for ff_matrix and ffdf (in utils)
+
+2010-03-10 R.Scharpf committed version 1.5.34
+
+**	  updated DESCRIPTION to import ff
+**        added AllClasses.R with defitions for ff-derived classes
+**        temporarily exporting everything in the NAMESPACE
